<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails">

    <!--For first name field-->
    <TextView
        android:id="@+id/textViewname"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/first_name"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVname"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="95dp"
        android:layout_toEndOf="@+id/textViewname"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For last name  field-->
    <TextView
        android:id="@+id/textlname"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewname"
        android:text="@string/last_name"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVlname"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVname"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/textlname"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For email field-->
    <TextView
        android:id="@+id/email"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textlname"
        android:text="@string/email"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVemail"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVlname"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/email"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For username field-->
    <TextView
        android:id="@+id/user"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/email"
        android:text="@string/username"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVuser"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVemail"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/user"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Password field-->
    <TextView
        android:id="@+id/password"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/user"
        android:text="@string/password"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVpassword"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVuser"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/password"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />



    <!--For Address field-->
    <TextView
        android:id="@+id/textViewadd"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"
        android:text="@string/address"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVadd"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVpassword"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/textViewadd"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For City field-->
    <TextView
        android:id="@+id/textViewcity"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textViewadd"
        android:text="@string/city"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVcity"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVadd"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/textViewcity"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Postal Code field-->
    <TextView
        android:id="@+id/textViewpcode"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textViewcity"
        android:text="@string/postal_code"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVpcode"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVcity"
        android:layout_marginStart="17dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@+id/textViewpcode"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Phone field-->
    <TextView
        android:id="@+id/textViewphone"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textViewpcode"
        android:text="@string/phone"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/TVphone"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVpcode"
        android:layout_marginStart="17dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/textViewphone"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <Button
        android:id="@+id/blogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:onClick="back_login"
        android:text="Back to login" />

</RelativeLayout>